--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,8 +17,15 @@
 
         <div>
             <p>published: 28.04.2020, 12:30</p>
-            <h2><a href="">My second post</a></h2>
+            <h2><a href="fgfg">My second post</a></h2>
             <p>Используй команду git status перед git add </p>
         </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
 </body>
 </html>
