My django app commit2 task1 task2

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,7 +17,7 @@
 
         <div>
             <p>published: 28.04.2020, 12:30</p>
-            <h2><a href="fgfg">My second post</a></h2>
+            <h2><a href="">My second post</a></h2>
             <p>Используй команду git status перед git add </p>
         </div>
         {% for post in posts %}
