--- a/blog/templates/includes/footer.html
+++ b/blog/templates/includes/footer.html
@@ -1,6 +1,10 @@
-    <footer>
-<!--        <iframe src='https://select.by' style='opacity:1; max-height:1000; max-width:1000'></iframe>&ndash;&gt;-->
-        <br /><br /><br />
-        <hr />
-        SerzhigСorporate@
-    </footer>
+ <section>
+
+        <div class="container pt-5 pb-2">
+            <div class="row ">
+                <div class="col-12 text-right">
+                    SerzhigСorporate ©
+                </div>
+            </div>
+        </div>
+ </section>
