--- a/blog/templates/blog/arhive_month.html
+++ b/blog/templates/blog/arhive_month.html
@@ -1,11 +1,14 @@
 {% extends 'blog/base.html' %}
 {%load static%}
 
-<!--{% block css %}-->
-<!--<link rel="stylesheet" href="{% static 'css/blog.css' %}"-->
-<!--{% endblock css %}-->
 
 {% block title %} {{title}} {% endblock title %}
+
+{% block five%}
+<a href="/">^назад</a>
+{{ block.super }}
+{%endblock%}
+
 
 {% block content %}
 
