--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,11 +1,17 @@
 {% extends 'blog/base.html' %}
 {%load static%}
 
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-{% endblock css %}
+<!--{% block css %}-->
+<!--<link rel="stylesheet" href="{% static 'css/blog.css' %}">-->
+<!--{% endblock css %}-->
 
 {% block title %} {{title}} {% endblock title %}
+
+{% block five%}
+<a href="/">^назад</a>
+{{ block.super }}
+{%endblock%}
+
 
 {% block content %}
 
