--- a/blog/templates/includes/header.html
+++ b/blog/templates/includes/header.html
@@ -1,6 +1,14 @@
 {% load static %}
-<header>
-<!--    можно просто так без лоад статик и %static-->
-<!--        <img src="static/img/logo.png">-->
-        <img src="{% static '/img/logo.png' %}">
-</header>
+ <section>
+
+        <div class="container">
+            <div class="row ">
+                <div class="col-2" >
+                        <img class ="rounded img-fluid" Style="border-radius:1rem !important" src="{% static '/img/logo.png' %}">
+                </div>
+                 <div class="col-8" >
+                        <h1><a href="/">Zhig Blog</a></h1>
+                </div>
+            </div>
+        </div>
+ </section>
