--- a/blog/templates/includes/header.html
+++ b/blog/templates/includes/header.html
@@ -1,7 +1,7 @@
 {% load static %}
  <section>
 
-        <div class="container">
+        <div class="container pt-2">
             <div class="row ">
                 <div class="col-2" >
                         <img class ="rounded img-fluid" Style="border-radius:1rem !important" src="{% static '/img/logo.png' %}">
