--- a/blog/templates/blog/arhive_month.html
+++ b/blog/templates/blog/arhive_month.html
@@ -21,7 +21,7 @@
 
           <p>{{ post.text|linebreaksbr|truncatewords:20 }}</p>
           <hr/>
-          {% empty %} <p> Sorry, no posts</p>>
+          {% empty %} <p> Sorry, no posts</p>
       </div>
   {% endfor %}
 
