--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -59,7 +59,11 @@
                 <div class="col-xl-8 col-sm-10 col-9 text-left" style="min-height:540px; background-color:linen">
 
                     <div>
+                        {% if user.is_authenticated %}
                         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"> Добавить новую запись</span></a>
+                        <br>
+                        <a href="{% url 'comment_new' %}" > Добавить новый комментарий</a>
+                        {% endif %}
                     </div>
                     <br />
                     <hr />
