--- a/blog/templates/includes/header.html
+++ b/blog/templates/includes/header.html
@@ -4,7 +4,7 @@
         <div class="container pt-2">
             <div class="row ">
                 <div class="col-2" >
-                        <img class ="rounded img-fluid" Style="border-radius:1rem !important" src="{% static '/img/logo.png' %}">
+                    <a href="/"><img class ="rounded img-fluid" Style="border-radius:1rem !important" src="{% static '/img/logo.png' %}"> </a>
                 </div>
                  <div class="col-8" >
                         <h1><a href="/">Zhig Blog</a></h1>
