--- a/blog/templates/blog/comment_edit.html
+++ b/blog/templates/blog/comment_edit.html
@@ -1,6 +1,7 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 
+{% block title %} {{title}} {% endblock title %}
 {% block content %}
 <h1>New comment</h1>
 <form method="POST" class="post-form">{% csrf_token %}
